--- a/paper.tex
+++ b/paper.tex
@@ -755,6 +755,18 @@ In particular to analyze $g_{T,\rho}(\theta,\psi,\chi)$ for these $\rho$, we nee
             0 & 1 \\
             1 & 0\end{pmatrix}$ on the codomain, $x_{\finiteField_{2n}^\times,\theta'}=\phi(x_{\NormOneGroup{2n},\theta})$ where $\theta'(t) = \theta(t^{1-q^n})$
     \end{enumerate}
+    \calvin{new cases:
+    \begin{enumerate}
+        \item When $\Frobenius$ acts by an $n$-cycle $(12 \hdots n)$ on the preimage and the cycle $(12 \hdots n),(n+1,n+2 \hdots 2n)$ on the image, $x_{\finiteFieldExtension{n}^\times \times \finiteFieldExtension{n}^\times,\alpha \times \alpha^{-1}} = \phi(x_{\finiteFieldExtension{n},\alpha})$
+        \item When $\Frobenius$ acts by $-1$ on the domain and by $\begin{pmatrix}
+            0 & 1 \\
+            1 & 0\end{pmatrix}$ on the codomain, $x_{\finiteField_{2n}^\times,\theta'}=\phi(x_{\NormOneGroup{2n},\theta})$ where $\theta'(t) = \theta(t^{1-q^n})$
+        \item When 
+    \end{enumerate}
+    
+    
+    
+    }
 \end{lemma}
 \begin{proof}
 Recall that $x_{T,\theta}$ is defined by for sufficiently large $m$ with $\zeta_m = 1/(q^m-1)$ under the fixed identification $\multiplicativegroup{\algebraicClosure{\finiteField}} \cong (\mathbb{Q}/\mathbb{Z})_{p'}$
